--- a/MoleDetectionApp/app/src/main/res/layout/activity_main.xml
+++ b/MoleDetectionApp/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/ActivityContentBase"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,10 +9,12 @@
 
     <FrameLayout
         android:id="@+id/main_vision_click_view"
+        style="@style/Clickable"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        style="@style/Clickable"
+        android:layout_marginTop="124dp"
         app:layout_constraintHeight_percent=".5"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -21,8 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:drawableTop="@drawable/ic_vision_s"
-            android:text="@string/main_vision_button"
             android:drawablePadding="16dp"
+            android:text="@string/main_vision_button"
             android:textAppearance="@style/TextAppearanceMainVisionNlp" />
     </FrameLayout>
 
